--- a/src/index.html
+++ b/src/index.html
@@ -14,35 +14,43 @@
 
   <!-- Sign-up form start -->
 
-  Stay updated!
-
-  Join 60,000+ product managers receiving monthly updates on:
-
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
-
-  Email address
-  email@company.com
-
-  Subscribe to monthly newsletter
-
-  <!-- Sign-up form end -->
-
-  <!-- Success message start -->
-
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
-  <!-- Success message end -->
+  <div class="newsletter-wrapper">
+    <div class="newsletter-sign-up">
+      <div class="newsletter-content">
+          <h1>Stay updated!</h1>
+          <section class="newsletter-description">
+            <p>Join 60,000+ product managers receiving monthly updates on:</p>
+            <ul>
+              <li>Product discovery and building what matters</li>
+              <li>Measuring to ensure updates are a success</li>
+              <li>And much more!</li>
+            </ul>
+          </section>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+        <form>
+          <label for="email">Email address</label>
+          <input type="email" name="email" id="email" placeholder="email@company.com">
+          <button type="submit">
+            Subscribe to monthly newsletter
+          </button>
+        </form>
+      </div>
+      <img src="./assets/images/illustration-sign-up-desktop.svg" alt="newsletter sign-up cover art">
+    </div>
+  
+    <div class="success-message">
+      <img src="./assets/images/icon-success.svg" alt="success-icon">
+      <h1>Thanks for subscribing!</h1>
+      <p>A confirmation email has been sent to ash@loremcompany.com. 
+        Please open it and click the button inside to confirm your subscription.</p>
+      <button>Dismiss message</button>
+    </div>
+
+    <!-- <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div> -->
   </div>
+  
 </body>
 </html>
