--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
   <div class="newsletter-wrapper">
     <div class="newsletter-sign-up">
-      <div class="newsletter-content">
+      <div class="content">
           <h1>Stay updated!</h1>
           <section class="newsletter-description">
             <p>Join 60,000+ product managers receiving monthly updates on:</p>
@@ -27,10 +27,13 @@
             </ul>
           </section>
   
-        <form>
-          <label for="email">Email address</label>
+        <form novalidate>
+          <div class="form-guidance">
+            <label for="email">Email address</label>
+            <div class="error">Valid email required</div>
+          </div>
           <input type="email" name="email" id="email" placeholder="email@company.com">
-          <button type="submit">
+          <button type="submit" class="subscribe">
             Subscribe to monthly newsletter
           </button>
         </form>
@@ -38,10 +41,10 @@
       <img src="./assets/images/illustration-sign-up-desktop.svg" alt="newsletter sign-up cover art">
     </div>
   
-    <div class="success-message">
+    <div class="success-message content hidden">
       <img src="./assets/images/icon-success.svg" alt="success-icon">
       <h1>Thanks for subscribing!</h1>
-      <p>A confirmation email has been sent to ash@loremcompany.com. 
+      <p>A confirmation email has been sent to <b class="display-email"></b>. 
         Please open it and click the button inside to confirm your subscription.</p>
       <button>Dismiss message</button>
     </div>
