add mobile design

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,10 @@
           </button>
         </form>
       </div>
-      <img src="./assets/images/illustration-sign-up-desktop.svg" alt="newsletter sign-up cover art">
+      <img  
+        src="./assets/images/illustration-sign-up-desktop.svg"
+        alt="newsletter sign-up cover art"
+      />
     </div>
   
     <div class="success-message content hidden">
