fix list items wrapping under list-icon on smaller screens

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,18 @@
           <section class="newsletter-description">
             <p>Join 60,000+ product managers receiving monthly updates on:</p>
             <ul>
-              <li>Product discovery and building what matters</li>
-              <li>Measuring to ensure updates are a success</li>
-              <li>And much more!</li>
+              <li>
+                <img src="./assets/images/icon-list.svg" alt="list-icon"/>
+                <span>Product discovery and building what matters</span>
+              </li>
+              <li>
+                <img src="./assets/images/icon-list.svg" alt="list-icon"/>
+                <div>Measuring to ensure updates are a success</div>
+              </li>
+              <li>
+                <img src="./assets/images/icon-list.svg" alt="list-icon"/>
+                <div>And much more!</div>
+              </li>
             </ul>
           </section>
   
