move index.html to the root for easy hosting

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./src/styles.css" />
   <script type="module" src="script.js"></script>
 
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
@@ -22,15 +22,15 @@
             <p>Join 60,000+ product managers receiving monthly updates on:</p>
             <ul>
               <li>
-                <img src="./assets/images/icon-list.svg" alt="list-icon"/>
+                <img src="./src/assets/images/icon-list.svg" alt="list-icon"/>
                 <span>Product discovery and building what matters</span>
               </li>
               <li>
-                <img src="./assets/images/icon-list.svg" alt="list-icon"/>
+                <img src="./src/assets/images/icon-list.svg" alt="list-icon"/>
                 <div>Measuring to ensure updates are a success</div>
               </li>
               <li>
-                <img src="./assets/images/icon-list.svg" alt="list-icon"/>
+                <img src="./src/assets/images/icon-list.svg" alt="list-icon"/>
                 <div>And much more!</div>
               </li>
             </ul>
@@ -48,23 +48,18 @@
         </form>
       </div>
       <img  
-        src="./assets/images/illustration-sign-up-desktop.svg"
+        src="./src/assets/images/illustration-sign-up-desktop.svg"
         alt="newsletter sign-up cover art"
       />
     </div>
   
     <div class="success-message content hidden">
-      <img src="./assets/images/icon-success.svg" alt="success-icon">
+      <img src="./src/assets/images/icon-success.svg" alt="success-icon">
       <h1>Thanks for subscribing!</h1>
       <p>A confirmation email has been sent to <b class="display-email"></b>. 
         Please open it and click the button inside to confirm your subscription.</p>
       <button>Dismiss message</button>
     </div>
-
-    <!-- <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </div> -->
   </div>
   
 </body>
