--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./src/styles.css" />
-  <script type="module" src="script.js"></script>
+  <script type="module" src="./src/script.js"></script>
 
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
 </head>
